--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/main.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/main.tex
@@ -1,5 +1,6 @@
-\input{CasiDUso/src/UC5.tex}
-\input{CasiDUso/src/UC11.tex}
+\input{./src/UC6.tex}
+\input{./src/UC11.tex}
+\input{./src/UC40.tex}
 
 \newpage
 
