Modifiche UC5, main.tex

--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC11.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC11.tex
@@ -2,7 +2,7 @@
 
 \begin{figure}[h]
   \centering
-    \includegraphics[scale=0.5]{CasiDUso//Immagini/UC11.png}
+    \includegraphics[scale=0.5]{CasiDUso/Immagini/UC11.png}
   \caption{UC11  - Stato prenotazioni}
 \end{figure}
 
@@ -103,7 +103,6 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 	\begin{itemize}
 		\item l’utente contrassegna la postazione come occupata;
 		\item il sistema elabora correttamente la richiesta.
-		\end{itemize}
 	\end{itemize}
 \end{itemize}
 
@@ -119,7 +118,6 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 		\item l’amministratore naviga nell’apposita sezione di gestione della postazione;
 		\item l’amministratore contrassegna la postazione come disabilitata;
 		\item il sistema elabora correttamente la richiesta.
-		\end{itemize}
 	\end{itemize}
 \end{itemize}
 
@@ -135,6 +133,5 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 		\item l’amministratore naviga nell’apposita sezione di gestione della postazione;
 		\item l’amministratore contrassegna la postazione come abilitata;
 		\item il sistema elabora correttamente la richiesta.
-		\end{itemize}
 	\end{itemize}
 \end{itemize}
