--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC40.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC40.tex
@@ -1,8 +1,8 @@
-\subsubsection{UC 140- Igienizzazione Postazioni}
+\subsubsection{UC 140 - Igienizzazione Postazioni}
 
 \begin{figure}[h]
   \centering
-    \includegraphics[scale=0.5]{CasiDUso//Immagini/UC40.png}
+    \includegraphics[scale=0.5]{CasiDUso/Immagini/UC40.png}
   \caption{UC40  - Igienizzazione postazioni}
 \end{figure}
 
