--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC5.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC5.tex
@@ -2,7 +2,7 @@
 
 \begin{figure}[h]
   \centering
-    \includegraphics[scale=0.5]{CasiDUso//Immagini/UC5.png}
+    \includegraphics[scale=0.5]{CasiDUso/Immagini/UC5.png}
   \caption{UC5  - Creazione di una prenotazione}
 \end{figure}
 
@@ -12,7 +12,8 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 \item \textbf{Attori primari:} utente autenticato;
 \item \textbf{Descrizione:} l’utente vuole gestire una prenotazione a cui ha accesso a livello di permessi, con possibilità di creazione, modifica, eliminazione e visualizzazione;
 \item \textbf{Precondizione:} l’utente è autenticato nell’applicazione e ha i permessi per eseguire le azioni di cui sopra;
-\item \textbf{Postcondizione:} l’utente ha creato, modificato, eliminato o visualizzato una prenotazione;\item \textbf{Scenario principale:} 
+\item \textbf{Postcondizione:} l’utente ha creato, modificato, eliminato o visualizzato una prenotazione;
+\item \textbf{Scenario principale:} 
 	\begin{itemize}
 		\item l’utente naviga nell’apposita sezione di modifica della prenotazione;
 		\item l’utente crea, visualizza, modifica o rimuove una sua prenotazione;
@@ -25,8 +26,9 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 \begin{itemize}
 \item \textbf{Attori primari:} utente autenticato;
 \item \textbf{Descrizione:} l’utente vuole prenotare una postazione per una certa data od orario;
-;\item \textbf{Precondizione:} l’utente è autenticato e naviga nell’apposita sezione di creazione di una prenotazione;
-\item \textbf{Postcondizione:} l’utente crea correttamente una prenotazione per la data ed ora scelta;\item \textbf{Scenario principale:} 
+\item \textbf{Precondizione:} l’utente è autenticato e naviga nell’apposita sezione di creazione di una prenotazione;
+\item \textbf{Postcondizione:} l’utente crea correttamente una prenotazione per la data ed ora scelta;
+\item \textbf{Scenario principale:} 
 	\begin{itemize}
 		\item il sistema elabora correttamente la richiesta, mandando in stato di “pending” la prenotazione;
 		\item il sistema restituisce un errore per i seguenti motivi:
@@ -100,5 +102,4 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 	\begin{itemize}
 		\item il sistema elabora correttamente la richiesta;
 		\end{itemize}
-	\end{itemize}
 \end{itemize}
