Minor changes UCX e main.tex
Modificati UC e sistemato il path nel main.tex per la compilazione corretta del documento

--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC11.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC11.tex
@@ -2,7 +2,7 @@
 
 \begin{figure}[h]
   \centering
-    \includegraphics[scale=0.5]{CasiDUso/Immagini/UC11.png}
+    \includegraphics[scale=0.5]{src/CasiDUso/Immagini/UC11.png}
   \caption{UC11  - Stato prenotazioni}
 \end{figure}
 
