--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC5.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC5.tex
@@ -2,7 +2,7 @@
 
 \begin{figure}[h]
   \centering
-    \includegraphics[scale=0.5]{CasiDUso/Immagini/UC5.png}
+    \includegraphics[scale=0.5]{src/CasiDUso/Immagini/UC5.png}
   \caption{UC5  - Creazione di una prenotazione}
 \end{figure}
 
