--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/main.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/main.tex
@@ -1,6 +1,7 @@
-\input{./src/UC5.tex}
-\input{./src/UC11.tex}
-\input{./src/UC40.tex}
-
+\input{src/CasiDUso/src/UC5.tex}
+\newpage
+\input{src/CasiDUso/src/UC11.tex}
+\newpage
+\input{src/CasiDUso/src/UC40.tex}
 \newpage
 
