--- a/DocumentiInterni/StudioDiFattibilita/src/C3/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C3/main.tex
@@ -13,7 +13,7 @@ Grazie a questi dati si può riuscire a "mappare" le aree con più affluenza, e 
 \end{itemize}
 \subsection{Vincoli}
 \begin{itemize}
-    \item Le tecnologie di cui sopra
+    \item Le tecnologie di cui sopra;
     \item Il servizio deve essere:
     \begin{itemize}
         \item disponibile in caso di un guasto;
@@ -33,18 +33,18 @@ Grazie a questi dati si può riuscire a "mappare" le aree con più affluenza, e 
         \item il sistema deve essere testato tramite test end-to-end;
         \item devono essere correlati di report.
     \end{itemize}
-    \item Documentazione su problemi aperti con eventuali soluzioni proposte, scelte implementative e progettuali
+    \item Documentazione su problemi aperti con eventuali soluzioni proposte, scelte implementative e progettuali.
 \end{itemize}
 \subsection{Aspetti positivi}
 \begin{itemize}
-    \item formazione di competenze in ambito di big data e analisi predittiva, oggi ormai richieste da molte aziende importanti
-    \item competenze in collezionamento di stream di dati provenienti da più fonti
-    \item grande libertà di implementazione del servizio richiesto, con possibilità di discussione col proponente delle tecnologie utilizzate
+    \item formazione di competenze in ambito di big data e analisi predittiva, oggi ormai richieste da molte aziende importanti;
+    \item competenze in collezionamento di stream di dati provenienti da più fonti;
+    \item grande libertà di implementazione del servizio richiesto, con possibilità di discussione col proponente delle tecnologie utilizzate.
 \end{itemize}
 \subsection{Aspetti critici}
 \begin{itemize}
-    \item l'intero sistema di rilevazione dei dati dovrà essere emulato, in quanto non ci saranno dati veri su cui fare elaborazione. Ciò potrebbe richiedere tempo aggiuntivo oltre allo sviluppo del servizio stesso
-    \item i dati saranno di forme diverse in base alla fonte, pertanto dovranno essere messi in relazione tipi di dati diversi, portano probabilmente a problematiche da risolvere
+    \item l'intero sistema di rilevazione dei dati dovrà essere emulato, in quanto non ci saranno dati veri su cui fare elaborazione. Ciò potrebbe richiedere tempo aggiuntivo oltre allo sviluppo del servizio stesso;
+    \item i dati saranno di forme diverse in base alla fonte, pertanto dovranno essere messi in relazione tipi di dati diversi, portano probabilmente a problematiche da risolvere.
 \end{itemize}
 \subsection{Conclusioni}
 Il capitolato lascia molta libertà di implementazione, ma guidando gli studenti con suggetimenti sulle tecnologie da utilizzare.
