--- a/DocumentiInterni/StudioDiFattibilita/src/C5/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C5/main.tex
@@ -2,7 +2,7 @@
 Il capitolato in esame è intitolato "PORTACS: piattaforma di controllo mobilità autonoma", proposto dall'azienda Sanmarco Informatica mentre i committenti sono il Prof. Tullio Vardanega ed il Prof. Riccardo Cardin.
 \subsection{Descrizione del capitolato}
 L'azienda propone la creazione di un motore di elaborazione in tempo reale, che gestisca delle entità guidandole attraverso percorsi evitando collisioni ed eventualmente trovando i percorsi più convenienti.
-Il sistema centrale deve indicare ad ogni entità la prossima mossa per raggiungere il \glo{POI}, tenendo conto della mappa fornita con tutte le sue caratteristiche (limiti di corsie, sensi unici..)
+Il sistema centrale deve indicare ad ogni entità la prossima mossa per raggiungere il \glo{POI}, tenendo conto della mappa fornita con tutte le sue caratteristiche (limiti di corsie, sensi unici..).
 \subsection{Tecnologie Coinvolte}
 \begin{itemize}
     \item Git;
